--- a/index.html
+++ b/index.html
@@ -1,124 +1,66 @@
 <!DOCTYPE html>
-<html lang="my">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ငါ့ AI Project Showcase</title>
+  <title>About Me - Aung Min Tun</title>
   <style>
-    /* ===== Basic Reset ===== */
-    * {
+    body {
+      font-family: Arial, sans-serif;
+      background: #f3f3f3;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-
-    body {
-      background-color: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: #4caf50;
-      color: white;
-      padding: 1rem 0;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.2rem;
-    }
-
-    header p {
-      font-size: 1rem;
-      opacity: 0.9;
-    }
-
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-
-    section.project {
-      background-color: white;
+    .container {
+      max-width: 600px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
       border-radius: 10px;
-      padding: 1.5rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-
-    section.project h2 {
-      color: #4caf50;
-      margin-bottom: 1rem;
-    }
-
-    section.project img {
-      max-width: 100%;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-      border: 1px solid #ddd;
-    }
-
-    section.project iframe {
-      width: 100%;
-      height: 500px;
-      border: none;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
-
-    footer {
+      box-shadow: 0 2px 10px rgba(0,0,0,0.04);
       text-align: center;
-      padding: 1rem 0;
-      color: #666;
-      font-size: 0.9rem;
-      border-top: 1px solid #ddd;
-      margin-top: 2rem;
     }
-
-    a {
-      color: #4caf50;
+    h1 {
+      color: #333;
+      margin-bottom: 0.5em;
+    }
+    p {
+      color: #555;
+      font-size: 1.1em;
+    }
+    .social-links {
+      margin-top: 30px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+    .social-links a {
       text-decoration: none;
+      color: #fff;
+      background: #6c63ff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background .2s;
     }
-
-    a:hover {
-      text-decoration: underline;
+    .social-links a:hover {
+      background: #4136b5;
     }
   </style>
 </head>
 <body>
-
-<header>
-  <h1>ငါ့ AI Project Showcase</h1>
-  <p>Nano Banana & Sora AI Projects</p>
-</header>
-
-<main>
-
-  <!-- ===== Project 1 ===== -->
-  <section class="project">
-    <h2>Project 1: Nano Banana AI Image</h2>
-    <!-- Image link ထည့်ရန် -->
-    <img src="https://i.imgur.com/your-image-link.png" alt="Nano Banana AI Image">
-    <p>ဒီမှာ project description ရေးနိုင်ပါတယ်။ AI image generate နည်း / concept / tool အသုံးပြုပုံ ဖေါ်ပြနိုင်ပါတယ်။</p>
-  </section>
-
-  <!-- ===== Project 2 ===== -->
-  <section class="project">
-    <h2>Project 2: Sora AI Video</h2>
-    <!-- Video link / embed -->
-    <iframe src="https://nanobanana.io/project/your-project-id" title="Sora AI Video"></iframe>
-    <p>Video project description ရေးနိုင်ပါတယ်။ AI video tools, workflow, notes, etc.</p>
-  </section>
-
-</main>
-
-<footer>
-  <p>© Aung Min Tun | <a href="https://github.com/username">GitHub Profile</a></p>
-</footer>
-
-</bodyမင်းနာမည်
+  <div class="container">
+    <h1>About Me</h1>
+    <p>
+      Hi! I'm Aung Min Tun.<br>
+      Welcome to my personal page.<br>
+      Here you can find my social media profiles and connect with me!
+    </p>
+    <div class="social-links">
+      <a href="https://youtube.com/yourchannel" target="_blank">YouTube</a>
+      <a href="https://facebook.com/yourprofile" target="_blank">Facebook</a>
+      <a href="https://t.me/yourtelegramusername" target="_blank">Telegram</a>
+      <a href="https://www.tiktok.com/@yourusername" target="_blank">TikTok</a>
+    </div>
+  </div>
+</body>
+</html>
